# archive-openbrain

./: .audit_receipt.json.backup_t01  .audit_receipt.json.fresh_backup  .coderabbit.yaml  .gitignore  AGENT_RULES.md  ARCHITECTURE.md  BIRTHDAY.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  OPEN_BRAIN.md  OPERATIONAL_LAYERS.md  README.md  WHAT_IS_OPENBRAIN.md  WHITEPAPER.md  progress.txt  pyproject.toml  test_hook_verification.sh
docs/: outreach_drafts.md
handoffs/: 2026-03-29-session43-sagex-design.md
notebooks/: INDEX.md
openbrainlm/: __init__.py  __main__.py  bridge.py  cross_cutting.py  orchestrator.py  registry.py
research/: adversarial_security_sources.md  agent_handle_persistence_2026-03-24.md  agent_harness_deep_survey_2026-03-24.md  agent_harness_patterns_2026-03-24.md  agents_arcs_audit_patterns_2026-03-24.md  agents_arcs_centralized_vs_distributed_2026-03-25.md  agents_arcs_hooks_audit_2026-03-24.md  agents_arcs_local_recall_2026-03-24.md  agents_arcs_memory_audit_2026-03-24.md  agents_arcs_sources.md  ast_execution_guard_research.md  barrier_sources.md  categorical_memory_audit_2026-03-24.md  community_outreach_2026-03-24.md  component_map_86_repos.md  concurrency_control_2026-03-24.md  corridor_validation_features_2026-03-24.md  corridor_validation_p0_harness_2026-03-24.md  corridor_validation_rules_2026-03-24.md  destructive_action_intercepts_2026-03-24.md  docker_notebooklm_mcp_2026-03-30.md  drift_detection_mapping_2026-03-24.md  escalation_triggers_2026-03-24.md  evolutionary_ml_sources.md  gemini_ag_audit_2026-03-30.md  gemini_handoff_2026-03-25.md  (+27 more)
(+96 files in other folders)
